# geoexposure

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  boundary.geojson  population_grid.geojson  stations.geojson
examples/: basic_workflow.py
geoexposure/: __init__.py  equity.py  exposure.py  grid.py  interpolation.py  io.py  plotting.py
notebooks/: geoexposure_demo.ipynb
outputs/: grid_no2_exposure.geojson  summary.csv
tests/: test_geoexposure.py
